--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>swagger-java-bitbucket-client</name>
     <groupId>io.dockstore</groupId>
-    <version>1.12.0-alpha.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <properties>
         <github.url>scm:git:git@dockstore/swagger-java-bitbucket-client.git</github.url>
