--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>swagger-java-bitbucket-client</name>
     <groupId>io.dockstore</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <properties>
         <github.url>scm:git:git@dockstore/swagger-java-bitbucket-client.git</github.url>
@@ -46,7 +46,8 @@
         <connection>${github.url}</connection>
         <developerConnection>${github.url}</developerConnection>
         <url>${github.url}</url>
-    </scm>
+      <tag>swagger-java-bitbucket-client-2.0.0</tag>
+  </scm>
 
     <licenses>
         <license>
