--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>swagger-java-bitbucket-client</name>
     <groupId>io.dockstore</groupId>
-    <version>2.0.0</version>
+    <version>2.0.1-SNAPSHOT</version>
 
     <properties>
         <github.url>scm:git:git@github.com:dockstore/swagger-java-bitbucket-client.git</github.url>
