--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <dockstore-core.version>1.12.0-alpha.0</dockstore-core.version>
         <maven-failsafe.version>2.21.0</maven-failsafe.version>
         <maven-surefire.version>2.21.0</maven-surefire.version>
+        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
     </properties>
 
     <dependencyManagement>
