--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>swagger-java-bitbucket-client</name>
     <groupId>io.dockstore</groupId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
 
     <properties>
         <github.url>scm:git:git@github.com:dockstore/swagger-java-bitbucket-client.git</github.url>
@@ -47,7 +47,7 @@
         <connection>${github.url}</connection>
         <developerConnection>${github.url}</developerConnection>
         <url>${github.url}</url>
-      <tag>swagger-java-bitbucket-client-2.0.2</tag>
+      <tag>swagger-java-bitbucket-client-2.0.0</tag>
   </scm>
 
     <licenses>
