--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -21,5 +21,10 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
            ${{ runner.os }}-maven-
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17.0.4+8'
+          distribution: 'adopt'           
       - name: Build with mvn
         run: mvn -B -ntp  clean install 
